--- a/club-ganshoren/index.html
+++ b/club-ganshoren/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="vendors/jquery.easings.min.js"></script>
 	<script type="text/javascript" src="jquery.fullPage.js"></script>
     <title>Ganshoren Shooting Club</title>
